project get fix
